# flask_2048

./: .gitignore  README.md  app.py  pyproject.toml
static/css/: style.css
static/js/: game.js
templates/: index.html
